- Am schimbat incat replyMessage din MessageDTO sa fie de tipul MessageDTO, nu Message. - Am adaugat campul Chat in MessageDTO - Le-am implementat folosind LazyEvaluation, adica acel replyMessage va fi evaluat doar in momentul apelului. 	Astfel evit recursivitatea infinita in cazul in care mesajul 1 da reply la 2 si 2 la 1(cu toate ca nu e posibil din UI). - Am adaugat LazyEvaluation si pentru ChatDTO la mesaje si UserChatInfo.
- Am restructurat un pic codul incat Controllerele si view-urile sa fie in packete/foldere.
- Am facut incat sa nu poti da reply in privat daca esti intr-un chat privat si sa nu poti nici sa adaugi membri intr-un chat privat
- Am imbunatatit un pic UI-ul la Conversation incat sa nu se miste in jos bara de mesaje cand vrei sa dai reply(foarte putin inca se misca si nu stiu de ce)
	Si l-am facut un pic mai bun cand dai resize